welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: identifier expected but '(' found.
		T.(0) = getCouleurSol(); 
                  ^Array2:14: error: illegal start of simple expression
	for(l<- (-Ind) to -1)){
                             ^